Added functionality of sending google file as attachement,
